src/SGL2DANTLR/SGL2DParser.java
// Generated from C:/Users/William Luo/Desktop/University/CPSC 311/sgl2d/starter/src\SGL2D.g4 by ANTLR 4.7.2
package SGL2DANTLR;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SGL2DParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, INCCOUNTERONE=4, DECCOUNTERONE=5, INCCOUNTERTWO=6, 
		DECCOUNTERTWO=7, INCCOUNTERTHREE=8, DECCOUNTERTHREE=9, INCSPRITECOUNTER=10, 
		DECSPRITECOUNTER=11, SETSPRITECOUNTER=12, MOVETORANDOMONZERO=13, TRANSFORMONZERO=14, 
		GAMEOVERONZERO=15, WINONZERO=16, MOVETORANDOM=17, TRANSFORMTOSPRITE=18, 
		MOVEPLAYERTO=19, PLAYERINCCOUNTERONE=20, PLAYERINCCOUNTERTWO=21, PLAYERINCCOUNTERTHREE=22, 
		PLAYERINCSPRITECOUNTER=23, PLAYERDECCOUNTERONE=24, PLAYERDECCOUNTERTWO=25, 
		PLAYERDECCOUNTERTHREE=26, PLAYERDECSPRITECOUNTER=27, GAMEOVER=28, WIN=29, 
		ENVIRONMENT=30, GOAL=31, PLAYER=32, SPRITE=33, COUNTER=34, EVENT=35, SET=36, 
		COUNTERINDEX=37, ARROW=38, INT=39, XINT=40, YINT=41, COLOR=42, SOLID=43, 
		COMMAND=44, WHITESPACE=45, BOOLEAN=46, WORD=47, NEWLINE=48;
	public static final int
		RULE_start = 0, RULE_expression = 1, RULE_environment = 2, RULE_goal = 3, 
		RULE_player = 4, RULE_sprite = 5, RULE_counter = 6, RULE_event = 7, RULE_set = 8, 
		RULE_newline = 9, RULE_position = 10, RULE_range = 11, RULE_action = 12, 
		RULE_incCounter1 = 13, RULE_decCounter1 = 14, RULE_incCounter2 = 15, RULE_decCounter2 = 16, 
		RULE_incCounter3 = 17, RULE_decCounter3 = 18, RULE_incSpriteCounter = 19, 
		RULE_decSpriteCounter = 20, RULE_setSpriteCounter = 21, RULE_transformOnZeroCounter = 22, 
		RULE_gameOverOnZeroCounter = 23, RULE_winOnZeroCounter = 24, RULE_moveToRandom = 25, 
		RULE_moveToRandomOnZero = 26, RULE_transformToSprite = 27, RULE_movePlayerTo = 28, 
		RULE_playerIncCounter1 = 29, RULE_playerIncCounter2 = 30, RULE_playerIncCounter3 = 31, 
		RULE_playerDecCounter1 = 32, RULE_playerDecCounter2 = 33, RULE_playerDecCounter3 = 34, 
		RULE_playerIncSpriteCounter = 35, RULE_playerDecSpriteCounter = 36, RULE_gameOver = 37, 
		RULE_win = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "expression", "environment", "goal", "player", "sprite", "counter", 
			"event", "set", "newline", "position", "range", "action", "incCounter1", 
			"decCounter1", "incCounter2", "decCounter2", "incCounter3", "decCounter3", 
			"incSpriteCounter", "decSpriteCounter", "setSpriteCounter", "transformOnZeroCounter", 
			"gameOverOnZeroCounter", "winOnZeroCounter", "moveToRandom", "moveToRandomOnZero", 
			"transformToSprite", "movePlayerTo", "playerIncCounter1", "playerIncCounter2", 
			"playerIncCounter3", "playerDecCounter1", "playerDecCounter2", "playerDecCounter3", 
			"playerIncSpriteCounter", "playerDecSpriteCounter", "gameOver", "win"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "','", "')'", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'>'", null, null, null, null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "INCCOUNTERONE", "DECCOUNTERONE", "INCCOUNTERTWO", 
			"DECCOUNTERTWO", "INCCOUNTERTHREE", "DECCOUNTERTHREE", "INCSPRITECOUNTER", 
			"DECSPRITECOUNTER", "SETSPRITECOUNTER", "MOVETORANDOMONZERO", "TRANSFORMONZERO", 
			"GAMEOVERONZERO", "WINONZERO", "MOVETORANDOM", "TRANSFORMTOSPRITE", "MOVEPLAYERTO", 
			"PLAYERINCCOUNTERONE", "PLAYERINCCOUNTERTWO", "PLAYERINCCOUNTERTHREE", 
			"PLAYERINCSPRITECOUNTER", "PLAYERDECCOUNTERONE", "PLAYERDECCOUNTERTWO", 
			"PLAYERDECCOUNTERTHREE", "PLAYERDECSPRITECOUNTER", "GAMEOVER", "WIN", 
			"ENVIRONMENT", "GOAL", "PLAYER", "SPRITE", "COUNTER", "EVENT", "SET", 
			"COUNTERINDEX", "ARROW", "INT", "XINT", "YINT", "COLOR", "SOLID", "COMMAND", 
			"WHITESPACE", "BOOLEAN", "WORD", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SGL2D.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SGL2DParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SGL2DParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				expression();
				setState(80);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public EnvironmentContext environment() {
			return getRuleContext(EnvironmentContext.class,0);
		}
		public GoalContext goal() {
			return getRuleContext(GoalContext.class,0);
		}
		public PlayerContext player() {
			return getRuleContext(PlayerContext.class,0);
		}
		public SpriteContext sprite() {
			return getRuleContext(SpriteContext.class,0);
		}
		public CounterContext counter() {
			return getRuleContext(CounterContext.class,0);
		}
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public NewlineContext newline() {
			return getRuleContext(NewlineContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case ENVIRONMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				environment();
				}
				break;
			case GOAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				goal();
				}
				break;
			case PLAYER:
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				player();
				}
				break;
			case SPRITE:
				enterOuterAlt(_localctx, 5);
				{
				setState(88);
				sprite();
				}
				break;
			case COUNTER:
				enterOuterAlt(_localctx, 6);
				{
				setState(89);
				counter();
				}
				break;
			case EVENT:
				enterOuterAlt(_localctx, 7);
				{
				setState(90);
				event();
				}
				break;
			case SET:
				enterOuterAlt(_localctx, 8);
				{
				setState(91);
				set();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 9);
				{
				setState(92);
				newline();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnvironmentContext extends ParserRuleContext {
		public TerminalNode ENVIRONMENT() { return getToken(SGL2DParser.ENVIRONMENT, 0); }
		public TerminalNode ARROW() { return getToken(SGL2DParser.ARROW, 0); }
		public TerminalNode NEWLINE() { return getToken(SGL2DParser.NEWLINE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> XINT() { return getTokens(SGL2DParser.XINT); }
		public TerminalNode XINT(int i) {
			return getToken(SGL2DParser.XINT, i);
		}
		public List<TerminalNode> YINT() { return getTokens(SGL2DParser.YINT); }
		public TerminalNode YINT(int i) {
			return getToken(SGL2DParser.YINT, i);
		}
		public EnvironmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_environment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).enterEnvironment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).exitEnvironment(this);
		}
	}

	public final EnvironmentContext environment() throws RecognitionException {
		EnvironmentContext _localctx = new EnvironmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_environment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(ENVIRONMENT);
			setState(96);
			match(ARROW);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==XINT || _la==YINT) {
				{
				{
				setState(97);
				_la = _input.LA(1);
				if ( !(_la==XINT || _la==YINT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(103);
				match(NEWLINE);
				setState(104);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GoalContext extends ParserRuleContext {
		public TerminalNode GOAL() { return getToken(SGL2DParser.GOAL, 0); }
		public TerminalNode ARROW() { return getToken(SGL2DParser.ARROW, 0); }
		public TerminalNode NEWLINE() { return getToken(SGL2DParser.NEWLINE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> XINT() { return getTokens(SGL2DParser.XINT); }
		public TerminalNode XINT(int i) {
			return getToken(SGL2DParser.XINT, i);
		}
		public List<TerminalNode> YINT() { return getTokens(SGL2DParser.YINT); }
		public TerminalNode YINT(int i) {
			return getToken(SGL2DParser.YINT, i);
		}
		public List<TerminalNode> COLOR() { return getTokens(SGL2DParser.COLOR); }
		public TerminalNode COLOR(int i) {
			return getToken(SGL2DParser.COLOR, i);
		}
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).enterGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).exitGoal(this);
		}
	}

	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_goal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(GOAL);
			setState(108);
			match(ARROW);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << XINT) | (1L << YINT) | (1L << COLOR))) != 0)) {
				{
				{
				setState(109);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << XINT) | (1L << YINT) | (1L << COLOR))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(115);
				match(NEWLINE);
				setState(116);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlayerContext extends ParserRuleContext {
		public TerminalNode PLAYER() { return getToken(SGL2DParser.PLAYER, 0); }
		public TerminalNode ARROW() { return getToken(SGL2DParser.ARROW, 0); }
		public TerminalNode NEWLINE() { return getToken(SGL2DParser.NEWLINE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> XINT() { return getTokens(SGL2DParser.XINT); }
		public TerminalNode XINT(int i) {
			return getToken(SGL2DParser.XINT, i);
		}
		public List<TerminalNode> YINT() { return getTokens(SGL2DParser.YINT); }
		public TerminalNode YINT(int i) {
			return getToken(SGL2DParser.YINT, i);
		}
		public List<TerminalNode> COLOR() { return getTokens(SGL2DParser.COLOR); }
		public TerminalNode COLOR(int i) {
			return getToken(SGL2DParser.COLOR, i);
		}
		public PlayerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_player; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).enterPlayer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).exitPlayer(this);
		}
	}

	public final PlayerContext player() throws RecognitionException {
		PlayerContext _localctx = new PlayerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_player);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(PLAYER);
			setState(120);
			match(ARROW);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << XINT) | (1L << YINT) | (1L << COLOR))) != 0)) {
				{
				{
				setState(121);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << XINT) | (1L << YINT) | (1L << COLOR))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(127);
				match(NEWLINE);
				setState(128);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpriteContext extends ParserRuleContext {
		public TerminalNode SPRITE() { return getToken(SGL2DParser.SPRITE, 0); }
		public TerminalNode WORD() { return getToken(SGL2DParser.WORD, 0); }
		public TerminalNode ARROW() { return getToken(SGL2DParser.ARROW, 0); }
		public TerminalNode NEWLINE() { return getToken(SGL2DParser.NEWLINE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> COLOR() { return getTokens(SGL2DParser.COLOR); }
		public TerminalNode COLOR(int i) {
			return getToken(SGL2DParser.COLOR, i);
		}
		public List<TerminalNode> SOLID() { return getTokens(SGL2DParser.SOLID); }
		public TerminalNode SOLID(int i) {
			return getToken(SGL2DParser.SOLID, i);
		}
		public SpriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sprite; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).enterSprite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).exitSprite(this);
		}
	}

	public final SpriteContext sprite() throws RecognitionException {
		SpriteContext _localctx = new SpriteContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sprite);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(SPRITE);
			setState(132);
			match(WORD);
			setState(133);
			match(ARROW);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLOR || _la==SOLID) {
				{
				{
				setState(134);
				_la = _input.LA(1);
				if ( !(_la==COLOR || _la==SOLID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(140);
				match(NEWLINE);
				setState(141);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CounterContext extends ParserRuleContext {
		public TerminalNode COUNTER() { return getToken(SGL2DParser.COUNTER, 0); }
		public TerminalNode COUNTERINDEX() { return getToken(SGL2DParser.COUNTERINDEX, 0); }
		public TerminalNode ARROW() { return getToken(SGL2DParser.ARROW, 0); }
		public TerminalNode NEWLINE() { return getToken(SGL2DParser.NEWLINE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> BOOLEAN() { return getTokens(SGL2DParser.BOOLEAN); }
		public TerminalNode BOOLEAN(int i) {
			return getToken(SGL2DParser.BOOLEAN, i);
		}
		public List<TerminalNode> INT() { return getTokens(SGL2DParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(SGL2DParser.INT, i);
		}
		public List<TerminalNode> WINONZERO() { return getTokens(SGL2DParser.WINONZERO); }
		public TerminalNode WINONZERO(int i) {
			return getToken(SGL2DParser.WINONZERO, i);
		}
		public List<TerminalNode> GAMEOVERONZERO() { return getTokens(SGL2DParser.GAMEOVERONZERO); }
		public TerminalNode GAMEOVERONZERO(int i) {
			return getToken(SGL2DParser.GAMEOVERONZERO, i);
		}
		public CounterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_counter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).enterCounter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SGL2DListener ) ((SGL2DListener)listener).exitCounter(this);
		}
	}
